Fixes user dropdown's z-index problem

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -4,7 +4,7 @@
   width: 100%;
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.075);
-  z-index: 1;
+  z-index: 4;
   .container {
     display: flex;
     align-items: center;
